requiredlabels/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: all-must-have-owner
spec:
  enforcementAction: deny # default is deny. Other options are: warn, dryrun
  match:
    namespaceSelector:
      matchLabels:
        policy.gatekeeper.workshop/enforce: "true"
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    message: "All namespaces must have an `owner` label that points to your company username (me.company.local)"
    labels:
      - key: owner
        allowedRegex: "^[a-zA-Z]+.company.local$"
